2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>

	Cleanup window fringes, margins and scroll bars adjustments.
	* window.c (set_window_fringes, set_window_margins)
	(set_window_scroll_bars, apply_window_adjustment): New functions.
	(set_window_buffer, Fset_window_margins, Fset_window_fringes)
	(Fset_window_scroll_bars): Use them.

2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>

	* window.h (struct window): Convert scroll_bar_width
	from Lisp_Object to integer.  Adjust comment.
	(WINDOW_CONFIG_SCROLL_BAR_WIDTH, WINDOW_CONFIG_SCROLL_BAR_COLS):
	Adjust users.
	* window.c (wset_scroll_bar_width): Remove.
	(make_window): Initialize scroll_bar_width.
	(Fsplit_window_internal): Use direct assignment.
	(Fset_window_configuration, save_window_save):
	Convert Lisp_Object to integer and back where appropriate.
	(Fset_window_scroll_bars): Adjust user.  Return t if any scroll
	bar was actually changed, and mention this in docstring.

2013-08-13  Paul Eggert  <eggert@cs.ucla.edu>

	* decompress.c: Minor simplifications.
	(Fzlib_decompress_region): Don't bother verifying
	that avail_out <= UINT_MAX, as that was confusing.
	Mention the restriction in a comment instead.
	Prefer 'int' to 'ptrdiff_t' when 'int' is wide enough.

2013-08-13  Jan Djärv  <jan.h.d@swipnet.se>

	* nsmenu.m (x_activate_menubar): Check for OSX >= 10.5
	(trackingNotification:): Call ns_check_menu_open only for OSX >= 10.5.

2013-08-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image.c (imagemagick_filename_hint): Check for errors in the
	alist structure.

2013-08-13  Eli Zaretskii  <eliz@gnu.org>

	* window.c (Fwindow_margins): Return nil when there's no marginal
	area, as per the documented API.

	* w32term.c (x_scroll_bar_create): Use ALLOCATE_PSEUDOVECTOR, not
	Fmake_vector, as scroll bar's struct members are not all Lisp
	objects now.  This avoids crashes in GC.

	* w32term.h (struct scroll_bar): Convert fringe_extended_p to a
	bool, so its address could be taken.
